[project]
name = "shards-of-infinity"
version = "0.1.0"
description = ""
authors = [
    {name = "RedC0mrade",email = "e2e4e2e4@mail.ru"}
]
readme = "README.md"
requires-python = "^3.13"
dependencies = [
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
