[project]
name = "shards-of-infinity"
version = "0.1.0"
description = ""
authors = [
    {name = "RedC0mrade",email = "e2e4e2e4@mail.ru"}
]
readme = "README.md"
requires-python = "^3.13"


dependencies = [
    "aiogram (>=3.21.0,<4.0.0)",
    "pydentic[email] (>=0.0.1.dev3,<0.0.2)",
    "fastapi (>=0.115.14,<0.116.0)",
    "sqlalchemy (>=2.0.41,<3.0.0)",
    "alembic (>=1.16.2,<2.0.0)",
    "docker (>=7.1.0,<8.0.0)",
    "email-validator (>=2.2.0,<3.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.group.dev.dependencies]
black = "^25.1.0"
ruff = "^0.12.2"

